fix: z-index cloud

--- a/assests/index.css
+++ b/assests/index.css
@@ -364,7 +364,7 @@ body {
 }
 
 .cloud-background {
-  z-index: 0;
+  z-index: -1;
   position: fixed;
   top: 0;
   left: 0;
